--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<hl>GDPR Privacy Policy of "RJ Collection by Jo”</hl>
+<h1>GDPR Privacy Policy of "RJ Collection by Jo”</h1>
 
-<p>Last updated: May 01, 2020
+<p>Last updated: May 01, 2020</p>
 
 Definitions
 
