--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Last updated: May 01, 2020</p>
 
-Definitions
+<p>Definitions
 
 ●	RJ Collection by Jo 
 RJ Collection by Jo means https://www.facebook.com/RJ-Collection-109125667400608/?view_public_for=109125667400608.
