--- a/index.html
+++ b/index.html
@@ -6,77 +6,77 @@
 
 <p>Last updated: May 01, 2020</p>
 
-<p>Definitions
+<p>Definitions</p>
 
-●	RJ Collection by Jo 
-RJ Collection by Jo means https://www.facebook.com/RJ-Collection-109125667400608/?view_public_for=109125667400608.
+<p>●	RJ Collection by Jo </p>
+<p>RJ Collection by Jo means https://www.facebook.com/RJ-Collection-109125667400608/?view_public_for=109125667400608.</p>
 
-●	GDPR
-General Data Protection Regulation Act.
+<p>●	GDPR</p>
+<p>General Data Protection Regulation Act.</p>
 
-●	Data Controller
-Data Controller means the natural or legal person who (either alone or jointly or in common with other persons) determines the purposes for which and the manner in which any personal information are, or are to be, processed.
+<p>●	Data Controller</p>
+<p>Data Controller means the natural or legal person who (either alone or jointly or in common with other persons) determines the purposes for which and the manner in which any personal information are, or are to be, processed.</p>
 
-●	Data Processor
-Data Processor means any natural or legal person who processes the data on behalf of the Data Controller.
+<p>●	Data Processor</p>
+<p>Data Processor means any natural or legal person who processes the data on behalf of the Data Controller.</p>
 
-●	Data Subject
-Data Subject is any living individual who is using our Service and is the subject of Personal Data.
+<p>●	Data Subject</p>
+<p>Data Subject is any living individual who is using our Service and is the subject of Personal Data.</p>
 
-1. Principles for processing personal data
-Our principles for processing personal data are:
+<p>1. Principles for processing personal data</p>
+<p>Our principles for processing personal data are:</p>
 
-●	Fairness and lawfulness. When we process personal data, the individual rights of the Data Subjects must be protected. All personal data must be collected and processed in a legal and fair manner.
+<p>●	Fairness and lawfulness. When we process personal data, the individual rights of the Data Subjects must be protected. All personal data must be collected and processed in a legal and fair manner.</p>
 
-●	Restricted to a specific purpose. The personal data of Data Subject must be processed only for specific purposes.
+<p>●	Restricted to a specific purpose. The personal data of Data Subject must be processed only for specific purposes.</p>
 
-●	Transparency. The Data Subject must be informed of how his/her data is being collected, processed and used.
+<p>●	Transparency. The Data Subject must be informed of how his/her data is being collected, processed and used.</p>
 
-2. What personal data we collect and process
-“RJ Collection by Jo” collects several different types of personal data for various purposes. Personal Data may include, but is not limited to:
+<p>2. What personal data we collect and process</p>
+<p>“RJ Collection by Jo” collects several different types of personal data for various purposes. Personal Data may include, but is not limited to:</p>
 
-●	Email address
-●	First name and last name
-●	Phone number
-●	Address, State, Province, ZIP/Postal code, City
+<p>●	Email address</p>
+<p>●	First name and last name</p>
+<p>●	Phone number</p>
+<p>●	Address, State, Province, ZIP/Postal code, City</p>
 
-3. How we use the personal data
+<p>3. How we use the personal data</p>
 
-“RJ Collection by Jo” uses the collected personal data for various purposes:
+<p>“RJ Collection by Jo” uses the collected personal data for various purposes:</p>
 
-●	To provide you with services
-●	To notify you about changes to our services and/or products
-●	To provide customer support
-●	To gather analysis or valuable information so that we can improve our services
-●	To detect, prevent and address technical issues
+<p>●	To provide you with services</p>
+<p>●	To notify you about changes to our services and/or products</p>
+<p>●	To provide customer support</p>
+<p>●	To gather analysis or valuable information so that we can improve our services</p>
+<p>●	To detect, prevent and address technical issues</p>
 
-4. Legal basis for collecting and processing personal data
+<p>4. Legal basis for collecting and processing personal data</p>
 
-“RJ Collection by Jo” legal basis for collecting and using the personal data described in this Data Protection Policy depends on the personal data we collect and the specific context in which we collect the information:
+<p>“RJ Collection by Jo” legal basis for collecting and using the personal data described in this Data Protection Policy depends on the personal data we collect and the specific context in which we collect the information:</p>
 
-●	“RJ Collection by Jo” needs to perform a contract with you
-●	You have given “RJ Collection by Jo” permission to do so
-●	Processing your personal data is in “RJ Collection by Jo” legitimate interests
-●	“RJ Collection by Jo” needs to comply with the law
+<p>●	“RJ Collection by Jo” needs to perform a contract with you</p>
+<p>●	You have given “RJ Collection by Jo” permission to do so</p>
+<p>●	Processing your personal data is in “RJ Collection by Jo” legitimate interests</p>
+<p>●	“RJ Collection by Jo” needs to comply with the law</p>
 
-5. Retention of personal data
+<p>5. Retention of personal data</p>
 
-“RJ Collection by Jo” will retain your personal information only for as long as is necessary for the purposes set out in this Data Protection Policy.
+<p>“RJ Collection by Jo” will retain your personal information only for as long as is necessary for the purposes set out in this Data Protection Policy.</p>
 
-“RJ Collection by Jo” will retain and use your information to the extent necessary to comply with our legal obligations, resolve disputes, and enforce our policies.
+<p>“RJ Collection by Jo” will retain and use your information to the extent necessary to comply with our legal obligations, resolve disputes, and enforce our policies.</p>
 
-6. Data protection rights
+<p>6. Data protection rights</p>
 
-If you are a resident of the European Economic Area (EEA), you have certain data protection rights. If you wish to be informed what personal data we hold about you and if you want it to be removed from our systems, please contact us.
+<p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. If you wish to be informed what personal data we hold about you and if you want it to be removed from our systems, please contact us.</p>
 
-In certain circumstances, you have the following data protection rights:
+<p>In certain circumstances, you have the following data protection rights:</p>
 
-●	The right to access, update or to delete the information we have on you
-●	The right of rectification
-●	The right to object
-●	The right of restriction
-●	The right to data portability
-●	The right to withdraw consent</p>
+<p>●	The right to access, update or to delete the information we have on you</p>
+<p>●	The right of rectification</p>
+<p>●	The right to object</p>
+<p>●	The right of restriction</p>
+<p>●	The right to data portability</p>
+<p>●	The right to withdraw consent</p>
 
 
 
