--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <p>Definitions</p>
 
-<p>●	RJ Collection by Jo </p>
-<p>RJ Collection by Jo means https://www.facebook.com/RJ-Collection-109125667400608/?view_public_for=109125667400608.</p>
+<p>●	RJ Collection by Jo 
+RJ Collection by Jo means https://www.facebook.com/RJ-Collection-109125667400608/?view_public_for=109125667400608.</p>
 
 <p>●	GDPR</p>
 <p>General Data Protection Regulation Act.</p>
